--- a/packages.yml
+++ b/packages.yml
@@ -6,6 +6,7 @@ dependencies:
   - anaconda-client=1.7.2=py37_0
   - anaconda-navigator=1.9.7=py37_0
   - asn1crypto=1.2.0=py37_0
+  - astroid=2.3.2=py37_0
   - attrs=19.3.0=py_0
   - blas=1.0=mkl
   - ca-certificates=2019.10.16=0
@@ -28,10 +29,12 @@ dependencies:
   - importlib_metadata=0.23=py37_0
   - intel-openmp=2019.4=243
   - ipython_genutils=0.2.0=py37_0
+  - isort=4.3.21=py37_0
   - joblib=0.13.2=py37_0
   - jpeg=9b=h024ee3a_2
   - jsonschema=3.1.1=py37_0
   - jupyter_core=4.6.0=py37_0
+  - lazy-object-proxy=1.4.2=py37h7b6447c_0
   - libedit=3.1.20181209=hc058e9b_0
   - libffi=3.2.1=hd88cf55_4
   - libgcc-ng=9.1.0=hdf63c60_0
@@ -42,6 +45,7 @@ dependencies:
   - libuuid=1.0.3=h1bed415_2
   - libxcb=1.13=h1bed415_1
   - libxml2=2.9.9=hea5a465_1
+  - mccabe=0.6.1=py37_1
   - mkl=2019.4=243
   - mkl-service=2.3.0=py37he904b0f_0
   - mkl_fft=1.0.14=py37ha843d7b_0
@@ -60,6 +64,7 @@ dependencies:
   - psutil=5.6.3=py37h7b6447c_0
   - pycosat=0.6.3=py37h14c3975_0
   - pycparser=2.19=py37_0
+  - pylint=2.4.3=py37_0
   - pyopenssl=19.0.0=py37_0
   - pyqt=5.9.2=py37h05f1152_2
   - pyrsistent=0.15.4=py37h7b6447c_0
@@ -82,6 +87,7 @@ dependencies:
   - tqdm=4.36.1=py_0
   - traitlets=4.3.3=py37_0
   - wheel=0.33.6=py37_0
+  - wrapt=1.11.2=py37h7b6447c_0
   - xz=5.2.4=h14c3975_4
   - yaml=0.1.7=had09818_2
   - zipp=0.6.0=py_0
